Refactor some code of frontend

--- a/index.html
+++ b/index.html
@@ -9,8 +9,18 @@
 		<div>
 			<h1>Memory Game!</h1>
 		</div>
-
-		<div id="game"></div>
+		<main>
+			<div id="mainPageContent">
+				<span>Welcome Back To The Memory Game!!!</span>
+				<button id="startButton">Start</button>
+			</div>
+			<div class="moves"></div>
+			<div class="gameContainer">
+				<div id="game"></div>
+			</div>
+			<div id="winner"></div>
+			<button id="restartButton">Restart</button>
+		</main>
 		<script src="./script.js"></script>
 	</body>
 </html>
