--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Memory Game!</title>
 		<link rel="stylesheet" href="style.css" />
 	</head>
@@ -12,6 +13,15 @@
 		<main>
 			<div id="mainPageContent">
 				<span>Welcome Back To The Memory Game!!!</span>
+				<div class="lableDiv">
+					<label for="levels">Level</label><br />
+					<select name="levels" id="levels">
+						<option value="1">Easy</option>
+						<option value="2">Medium</option>
+						<option value="3">Hard</option>
+					</select>
+				</div>
+
 				<button id="startButton">Start</button>
 			</div>
 			<div class="moves"></div>
