--- a/index.html
+++ b/index.html
@@ -30,12 +30,18 @@
 
 				<button id="startButton">Start</button>
 			</div>
-			<div class="moves"></div>
+			<div>
+				<div class="moves"></div>
+				<div class="bestScore"></div>
+			</div>
 			<div class="gameContainer">
 				<div id="game"></div>
 			</div>
 			<div id="winner"></div>
-			<button id="restartButton">Restart</button>
+			<div id="restartResetButton">
+				<button id="restartButton">Restart</button>
+				<button id="resetButton">Reset</button>
+			</div>
 		</main>
 		<script src="./script.js"></script>
 	</body>
